// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`byValidateJs nested validation 1`] = `
ViolationsList {
  "violations": [
    {
      "message": "Profile name is too short (minimum is 5 characters)",
      "path": [
        "profile",
        "name",
      ],
    },
  ],
}
`;

exports[`byValidateJs simple validation 1`] = `
ViolationsList {
  "violations": [
    {
      "message": "Name is too short (minimum is 5 characters)",
      "path": [
        "name",
      ],
    },
  ],
}
`;
